# cmd/api-server/applications/routes.go
@@ -12,6 +12,7 @@ func GenerateRoutes(relativePath string, r *gin.Engine, appHandler *ApiHandler) 
 		applications.GET("/", appHandler.ListOrganization)
 		applications.POST("/", appHandler.CreateOrganization)
 		applications.GET("/:organizationID", appHandler.DetailOrganization)
+		applications.GET("/:organizationID/component-definitions", appHandler.ListComponentDefinitions)
 		applications.GET("/:organizationID/a", appHandler.ListApplications)
 		applications.POST("/:organizationID/a", appHandler.CreateApplication)
 		applications.GET("/:organizationID/a/:applicationID", appHandler.DetailApplication)
